# Playground

./: .gitignore  README.md  examples.txt
NLP/: desc.txt  nlp_comparison.py  setup.sh
apache_spark/: README.md
apache_spark/benchmarks/: README.md
apache_spark/scala/: README.md
python/: README.md
python/NLP/: pyproject.toml
python/NLP/pl_benchmark/: README.md  comparison.py  setup.sh
python/NLP/pl_benchmark/pipelines/morfeusz2/: runner.py
python/NLP/pl_benchmark/pipelines/spacy/: runner.py
python/NLP/pl_benchmark/pipelines/spacy_pl/: pyproject.toml
python/NLP/pl_benchmark/pipelines/spacy_pl_trf/: pyproject.toml
python/NLP/pl_benchmark/pipelines/stanza/: runner.py
python/NLP/pl_benchmark/reports/: spacy-pl.json  summary.json
python/NLP/pl_benchmark/shared/src/pl_bench_core/: __init__.py  core.py  gold.py
python/nlp/pl_benchmark/: .gitignore  pyproject.toml
python/nlp/pl_benchmark/pipelines/spacy_pl/: runner.py
python/nlp/pl_benchmark/pipelines/spacy_pl_trf/: runner.py
python/nlp/pl_benchmark/reports/: morfeusz2.json  spacy-pl-trf.json  spacy.json  stanza.json  summary.md
python/nlp/pl_benchmark/shared/: pyproject.toml
react/: README.md
rust/: README.md
rust/guessing_game/src/: main.rs
rust/rust_introduction/Hello/src/: main.rs
rust/rust_introduction/guessing_game/src/: main.rs
rust/rusted_monitor/: Cargo.toml
rust/rusted_monitor/src/: main.rs
scala/: README.md
scala/scala2/hello-world/: build.sbt
scala/scala2/hello-world/src/main/scala/com/jswie/hello/: HelloWorld.scala
scala/scala3/hello-world/: build.sbt
scala/scala3/hello-world/src/main/scala/com/jswie/hello/: HelloWorld.scala
