[project]
name = "nlp-comparison"
version = "0.1.0"
description = "Polish NLP comparison using spaCy, Stanza, and Trankit."
requires-python = ">=3.10,<3.13"
dependencies = [
  "stanza>=1.8.2",
  "spacy>=3.7.0",
  "rapidfuzz>=3.8.0",
  "trankit>=1.1.0",
  "torch>=2.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"