[project]
name = "pl-bench-core"
version = "0.1.0"
description = "Shared data model and helpers for the Polish NLP benchmark (stdlib only)."
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
