[project]
name = "pl-pipeline-spacy-pl"
version = "0.1.0"
description = "Legacy ipipan spaCy-PL (pl_spacy_model_morfeusz) pipeline on the spaCy 2.3.2 stack."
# spaCy 2.3.x only supports Python <= 3.8.
requires-python = ">=3.8,<3.9"
dependencies = [
  # Versions from the pl_spacy_model_morfeusz 0.1.3 metadata (spacy/keras/tf),
  # with the compiled stack pinned to 2020-era releases that ship cp38 manylinux
  # wheels. Without these pins uv resolves newer in-range versions with no cp38
  # wheel, which fall back to source builds that fail on modern glibc (missing
  # crypt.h). numpy is held at >=1.20 (1.21.6) so thinc's cp38 wheel ABI and
  # TensorFlow agree; TF/keras are bumped from the declared 2.3.1/2.4.3 to 2.8
  # because 2.3.1 requires numpy<1.19, which conflicts with that thinc wheel.
  "spacy==2.3.2",
  "numpy==1.21.6",
  "murmurhash==1.0.2",
  "cymem==2.0.3",
  "preshed==3.0.2",
  "thinc==7.4.1",
  "blis==0.4.1",
  "tensorflow==2.8.4",
  "keras==2.8.0",
  # TF 2.8 pulls this; newer releases only ship aarch64 wheels, so pin to the
  # newest with a cp38 x86_64 wheel.
  "tensorflow-io-gcs-filesystem==0.25.0",
  "distance",
  # 1.99.8 is the newest morfeusz2 with a cp38 abi3 Linux wheel; later releases
  # ship cp310-only wheels and cannot install on Python 3.8.
  "morfeusz2==1.99.8",
  "pl-bench-core",
]

# Runner script only; the pl_spacy_model_morfeusz model is fetched separately by
# setup.sh (it is not on PyPI).
[tool.uv]
package = false

[tool.uv.sources]
pl-bench-core = { path = "../../shared", editable = true }
